modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/allowed-repos.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedrepos
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Allowed Repositories"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Requires container images to begin with a string from the specified list.
spec:
  crd:
    spec:
      names:
        kind: D8AllowedRepos
      validation:
        openAPIV3Schema:
          type: object
          properties:
            repos:
              description: The list of prefixes a container image is allowed to have.
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
            rego: |
              package d8.operation_policies

              import data.lib.common.input_containers

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                container := input_containers[_]
                satisfied := [repo | repo := input.parameters.repos[_]; startswith(container.image, repo)]
                count(satisfied) == 0
                msg := sprintf("container <%v> has an invalid image repo <%v>, allowed repos are %v", [container.name, container.image, input.parameters.repos])
              }
