modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-repos/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-repos
tests:
- name: operation-policy
  template: ../../templates/operation/allowed-repos.yaml
  constraint: constraint.yaml
  cases:
  - name: example-allowed
    object: allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: disallowed.yaml
    assertions:
    - violations: yes
